# WingLoop

./: .gitignore  01_Control.py  01_WingLoop.py  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  readme.md
MatlabWingLoopEnv/: pyvenv.cfg
WingLoop.egg-info/: PKG-INFO  SOURCES.txt
WingLoop_Library/: .gitignore  ASW_Helpers.py  Aswing_Director.py  Control_Library.py  Create_inputBus.m  PyControl.py  PyControl_IO.py  PyControl_Plot.py  PyControl_Text2Python.py  PyControl_additional.py  PyControl_grok.py  PyControl_old.py  Text2Python_Library.py  UAV_Controller.fmu  UAV_Controller.slx  UAV_Controller_fmu.mlproj  UAV_control_Strategy_LQR.asv  UAV_control_Strategy_LQR.m  WingLoop.py  WingLoop_Lib.py  WingLoop_Library.py  __init__.py  controls  data_imperial.json  data_test.json  plot.ps  previous_file.py  simulink_test_controller_old.slxc  test  test1.txt  test2.txt  test3.txt  tiesto_tesxt2py.py
WingLoop_Library/testfiles/: ASWING_test_output_metric  Expected_Text2Python_Output.txt  readme  wingloop_test.py
docs/: wingloop_test_aircraft.json
old/: 01_WingLoop.py
old/py_00_UAV_Files/: 00_Hawk_V0.asw  (+5 more)
py_00_UAV_Files/: 00_Hawk_V0_leveled_30.state  00_Pitch_PID_time_analysis.con  00_command  00_python_data.npz  Undeflected_Hawk_Leo.ps  aswing_pitch_control.con  default_commands  input  output  output_data.csv  test.py  timeseries_WingLoop  xplot11_logfile
py_02_Utilities/: Aswing_Director_Library.py  Control_Library.py  Dynamics_Tracking_Library.py  append_flight_data.m  text2python_library.py
wingloop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+219 files in other folders)
