[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wingloop"
version = "0.1.0"
description = "ASWING Director library"
authors = [
    { name = "Leonardo AVONI", email = "avonileonardo@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]

