[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "WingLoop"
version = "2.0.0"
description = "WingLoop control and aircraft simulation tools for ASWING"
readme = "README.md"
requires-python = ">=3.8, <3.13"

authors = [
    { name="Leonardo Avoni" }
]

dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["WingLoop_Library*"]
